[package]
authors = ["Kubewarden Developers <kubewarden@suse.de>"]
description = "Tool to manage Kubewarden policies"
edition = "2021"
name = "kwctl"
version = "1.26.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["cargo", "env"] }
clap-markdown = "0.1.4"
clap_complete = "4.5"
color-print = "0.3"
directories = { workspace = true }
flate2 = "1.1"
humansize = "2.1"
indicatif = "0.17"
is-terminal = "0.4.16"
itertools = { workspace = true }
k8s-openapi = { workspace = true }
lazy_static = { workspace = true }
pem = "3"
policy-evaluator = { path = "../policy-evaluator" }
prettytable-rs = "^0.10"
regex = { workspace = true }
rustls-pki-types = { workspace = true, features = ["alloc"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tar = "0.4.40"
termimad = "0.33.0"
thiserror = { workspace = true }
time = "0.3.36"
tiny-bench = "0.4"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
url = { workspace = true }
walrus = "0.23.0"
wasmparser = { workspace = true }

hostname-validator = "1.1.1"
# This is required to have reqwest built using the `rustls-tls-native-roots`
# feature across all the transitive dependencies of kwctl
# This is required to have kwctl use the system certificates instead of the
# ones bundled inside of rustls
reqwest = { workspace = true, default-features = false, features = [
  "rustls-tls-native-roots",
] }

[dev-dependencies]
assert_cmd = "2.0.14"
hyper = { workspace = true }
predicates = "3.1"
rstest = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true, features = ["blocking"] }
tower-test = { workspace = true }
